--- a/.github/workflows/format_soft_validate.yaml
+++ b/.github/workflows/format_soft_validate.yaml
@@ -25,6 +25,13 @@ jobs:
         with:
           path: ${{ env.WORKING_DIR }}
 
+      - name: Commit changes
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git diff-index --quiet HEAD || git commit -m "terraform fmt applied"
+
       - name: Create Pull Request
         id: pull-request
         uses: peter-evans/create-pull-request@v7
