--- a/.github/workflows/format_soft_validate.yaml
+++ b/.github/workflows/format_soft_validate.yaml
@@ -8,6 +8,10 @@ on:
       - main
 
 env:
+  ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+  ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+  ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+  ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
   WORKING_DIR: '.'
 
 jobs:
@@ -18,6 +22,8 @@ jobs:
       - name: Checkout
         id: checkout
         uses: actions/checkout@master
+        with:
+          ref: ${{ github.ref }}
 
       - name: terraform fmt
         id: fmt
@@ -32,19 +38,15 @@ jobs:
           git add .
           git diff-index --quiet HEAD || git commit -m "terraform fmt applied"
 
-      - name: Create Pull Request
-        id: pull-request
-        uses: peter-evans/create-pull-request@v7
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: terraform fmt
-          title: Reformat terraform files
-          body: Update Terraform files to canonical format using `terraform fmt`
-          branch: automated-terraform-fmt
+      - name: Push Changes
+        id: push
+        run: |
+          git push origin ${{ github.ref }}
 
   soft-validate:
     name: Soft Validate Terraform Files
     runs-on: ubuntu-latest
+    needs: format
     steps:
       - name: Checkout
         id: checkout
