--- a/.github/workflows/validate_deploy_dev.yaml
+++ b/.github/workflows/validate_deploy_dev.yaml
@@ -47,6 +47,7 @@ jobs:
   dev:
     name: Deploy Dev Environment
     runs-on: ubuntu-latest
+    needs: validate
     steps:
       - name: Checkout
         id: checkout
