--- a/.github/workflows/validate_deploy_stage.yaml
+++ b/.github/workflows/validate_deploy_stage.yaml
@@ -47,6 +47,7 @@ jobs:
   stage:
     name: Deploy Stage Environment
     runs-on: ubuntu-latest
+    needs: validate
     steps:
       - name: Checkout
         id: checkout
