feat: Added permission block to workflows

--- a/.github/workflows/validate_deploy_dev.yaml
+++ b/.github/workflows/validate_deploy_dev.yaml
@@ -6,6 +6,11 @@ on:
       - dev
   workflow_dispatch:
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 env:
   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
