--- a/.github/workflows/format_soft_validate.yaml
+++ b/.github/workflows/format_soft_validate.yaml
@@ -7,6 +7,11 @@ on:
       - stage
       - main
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 env:
   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
