--- a/.github/workflows/validate_prod.yaml
+++ b/.github/workflows/validate_prod.yaml
@@ -1,4 +1,4 @@
-name: Validate & Deploy Prod Environment
+name: Validate Prod
 
 on:
   pull_request:
@@ -48,33 +48,3 @@ jobs:
         uses: bridgecrewio/checkov-action@master
         with:
           directory: ${{ env.WORKING_DIR }}
-
-  prod:
-    name: Deploy Prod Environment
-    runs-on: ubuntu-latest
-    environment: Production
-    needs: validate
-    steps:
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@master
-
-      - name: Terraform Init
-        id: init
-        run: terraform init
-        working-directory: ${{ env.WORKING_DIR }}
-
-      - name: Terraform Workspace Prod
-        id: workspace
-        run: terraform workspace select prod || terraform workspace new prod
-        working-directory: ${{ env.WORKING_DIR }}
-
-      - name: Terraform Plan
-        id: plan
-        run: terraform plan -out=main.tfplan
-        working-directory: ${{ env.WORKING_DIR }}
-
-      - name: Terraform Apply
-        id: apply
-        run: terraform apply "main.tfplan"
-        working-directory: ${{ env.WORKING_DIR }}
