--- a/.github/workflows/validate_deploy_dev.yaml
+++ b/.github/workflows/validate_deploy_dev.yaml
@@ -68,12 +68,7 @@ jobs:
         run: terraform workspace select dev || terraform workspace new dev
         working-directory: ${{ env.WORKING_DIR }}
 
-      - name: Terraform Plan
-        id: plan
-        run: terraform plan -out=main.tfplan
-        working-directory: ${{ env.WORKING_DIR }}
-
       - name: Terraform Apply
         id: apply
-        run: terraform apply "main.tfplan"
+        run: terraform apply -auto-approve
         working-directory: ${{ env.WORKING_DIR }}
