feat: Edited workflows to continue-on-error for checkov

--- a/.github/workflows/format_soft_validate.yaml
+++ b/.github/workflows/format_soft_validate.yaml
@@ -78,4 +78,4 @@ jobs:
         uses: bridgecrewio/checkov-action@master
         with:
           directory: ${{ env.WORKING_DIR }}
-          hard_fail_on: HIGH
+        continue-on-error: true
