--- a/.github/workflows/validate_deploy_dev.yaml
+++ b/.github/workflows/validate_deploy_dev.yaml
@@ -48,6 +48,7 @@ jobs:
         uses: bridgecrewio/checkov-action@master
         with:
           directory: ${{ env.WORKING_DIR }}
+        continue-on-error: true
 
   dev:
     name: Deploy Dev Environment
