--- a/.github/workflows/validate_prod.yaml
+++ b/.github/workflows/validate_prod.yaml
@@ -48,3 +48,4 @@ jobs:
         uses: bridgecrewio/checkov-action@master
         with:
           directory: ${{ env.WORKING_DIR }}
+        continue-on-error: true
