feat: Added .yaml to script usage

--- a/.github/workflows/validate_deploy_dev.yaml
+++ b/.github/workflows/validate_deploy_dev.yaml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - name: Validation
         id: validation
-        uses: ./.github/actions/validate
+        uses: ./.github/actions/validate.yaml
         with:
           WORKING_DIR: ${{ env.WORKING_DIR }}
 
