--- a/.github/workflows/validate_prod.yaml
+++ b/.github/workflows/validate_prod.yaml
@@ -25,6 +25,6 @@ jobs:
     steps:
       - name: Validation
         id: validation
-        uses: ./.github/actions/validate
+        uses: ./.github/actions/validate.yaml
         with:
           WORKING_DIR: ${{ env.WORKING_DIR }}
