--- a/.github/workflows/format_&_validation.yaml
+++ b/.github/workflows/format_&_validation.yaml
@@ -55,6 +55,6 @@ jobs:
     steps:
       - name: Validation
         id: validation
-        uses: ./.github/actions/validate
+        uses: ./.github/actions/validate.yaml
         with:
           WORKING_DIR: ${{ env.WORKING_DIR }}
