--- a/.github/workflows/format_&_validation.yaml
+++ b/.github/workflows/format_&_validation.yaml
@@ -53,6 +53,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: format
     steps:
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@master
+      
       - name: Validation
         id: validation
         uses: ./.github/actions/validate.yaml
