--- a/.github/workflows/validate_deploy_stage.yaml
+++ b/.github/workflows/validate_deploy_stage.yaml
@@ -23,6 +23,10 @@ jobs:
   validation:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@master
+      
       - name: Validation
         id: validation
         uses: ./.github/actions/validate.yaml
