feat: modified action

--- a/.github/actions/validate.yaml
+++ b/.github/actions/validate.yaml
@@ -9,34 +9,28 @@ on:
         type: string
         default: '.'
 
-jobs:
-  validate:
-    name: Validate, Tfsec & Checkov
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@master
+runs:
+  using: 'composite'
+  steps:
+    - name: Terraform Init
+      id: init
+      run: terraform init
+      working-directory: ${{ inputs.WORKING_DIR }}
 
-      - name: Terraform Init
-        id: init
-        run: terraform init
-        working-directory: ${{ inputs.WORKING_DIR }}
+    - name: Terraform Validate
+      id: validate
+      run: terraform validate
+      working-directory: ${{ inputs.WORKING_DIR }}
 
-      - name: Terraform Validate
-        id: validate
-        run: terraform validate
-        working-directory: ${{ inputs.WORKING_DIR }}
+    - name: Tfsec
+      id: tfsec
+      uses: aquasecurity/tfsec-action@v1.0.3
+      with:
+        working_directory: ${{ inputs.WORKING_DIR }}
 
-      - name: Tfsec
-        id: tfsec
-        uses: aquasecurity/tfsec-action@v1.0.3
-        with:
-          working_directory: ${{ inputs.WORKING_DIR }}
-
-      - name: Checkov
-        id: checkov
-        uses: bridgecrewio/checkov-action@master
-        with:
-          directory: ${{ inputs.WORKING_DIR }}
-        continue-on-error: true
+    - name: Checkov
+      id: checkov
+      uses: bridgecrewio/checkov-action@master
+      with:
+        directory: ${{ inputs.WORKING_DIR }}
+      continue-on-error: true
