--- a/.github/workflows/format_&_validation.yaml
+++ b/.github/workflows/format_&_validation.yaml
@@ -59,6 +59,6 @@ jobs:
       
       - name: Validation
         id: validation
-        uses: ./.github/actions/validate.yaml
+        uses: ./.github/actions/validate
         with:
           WORKING_DIR: ${{ env.WORKING_DIR }}
