--- a/.github/workflows/validate_deploy_stage.yaml
+++ b/.github/workflows/validate_deploy_stage.yaml
@@ -29,7 +29,7 @@ jobs:
       
       - name: Validation
         id: validation
-        uses: ./.github/actions/validate.yaml
+        uses: ./.github/actions/validate
         with:
           WORKING_DIR: ${{ env.WORKING_DIR }}
 
