actions: Reworked action working directory

--- a/.github/actions/validate/action.yaml
+++ b/.github/actions/validate/action.yaml
@@ -5,7 +5,6 @@ on:
     inputs:
       WORKING_DIR:
         description: 'The working directory for the Terraform code'
-        required: true
         type: string
         default: '.'
 
@@ -19,24 +18,24 @@ runs:
     - name: Terraform Init
       id: init
       run: terraform init
-      working-directory: { inputs.WORKING_DIR }
+      working-directory: ${{ inputs.WORKING_DIR }}
       shell: bash
 
     - name: Terraform Validate
       id: validate
       run: terraform validate
-      working-directory: { inputs.WORKING_DIR }
+      working-directory: ${{ inputs.WORKING_DIR }}
       shell: bash
 
     - name: Tfsec
       id: tfsec
       uses: aquasecurity/tfsec-action@v1.0.3
       with:
-        working_directory: { inputs.WORKING_DIR }
+        working_directory: ${{ inputs.WORKING_DIR }}
 
     - name: Checkov
       id: checkov
       uses: bridgecrewio/checkov-action@master
       with:
-        directory: { inputs.WORKING_DIR }
+        directory: ${{ inputs.WORKING_DIR }}
       continue-on-error: true
