--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -6,7 +6,11 @@ on:
       workspace:
         description: 'Workspace to destroy'
         required: true
-        default: 'dev/stage/prod'
+        type: choice
+        options:
+          - dev
+          - stage
+          - prod
 
 env:
   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
@@ -31,11 +35,6 @@ jobs:
       - name: Terraform Init
         id: init
         run: terraform init
-        working-directory: ${{ env.WORKING_DIR }}
-
-      - name: Terraform Workspace Dev
-        id: workspace
-        run: terraform workspace select ${{ env.TF_WORKSPACE }}
         working-directory: ${{ env.WORKING_DIR }}
 
       - name: Terraform Destroy
