--- a/.github/actions/format/action.yaml
+++ b/.github/actions/format/action.yaml
@@ -1,17 +1,10 @@
-name: Terraform File Formatting & Validation
+name: Format Terraform Files
 
 on:
-  push:
-    branches-ignore:
-      - dev
-      - stage
-      - main
-    paths-ignore:
-      - '.github/**'
-
+  workflow_call:
+    
 permissions:
   contents: write
-  issues: write
   pull-requests: write
 
 env:
@@ -19,19 +12,15 @@ env:
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
   ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-  GITHUB_TOKEN: ${{ secrets.IAC_ASSIGNMENT_2_TOKEN }}
+  GH_TOKEN: ${{ github.token }}
   WORKING_DIR: '.'
 
-jobs:
-  format:
-    name: Format Terraform Files
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
+runs:
+  using: 'composite'
+  steps:
+    - name: Checkout
         id: checkout
         uses: actions/checkout@master
-        with:
-          ref: ${{ github.ref }}
 
       - name: terraform fmt
         id: fmt
@@ -50,17 +39,3 @@ jobs:
         id: push
         run: |
           git push origin ${{ github.ref }}
-
-  validation:
-    runs-on: ubuntu-latest
-    needs: format
-    steps:
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@master
-      
-      - name: Validation
-        id: validation
-        uses: ./.github/actions/validate
-        with:
-          WORKING_DIR: ${{ env.WORKING_DIR }}
