--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -17,9 +17,9 @@ env:
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
   ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-  GITHUB_TOKEN: ${{ secrets.IAC_ASSIGNMENT_2_TOKEN }}
+  GH_TOKEN: ${{ github.token }}
   TF_WORKSPACE: ${{ inputs.workspace }}
-  WORKING_DIR: '.'
+  WORKING_DIR: 'deployments'
 
 jobs:
   destroy:
@@ -29,8 +29,6 @@ jobs:
       - name: Checkout
         id: checkout
         uses: actions/checkout@master
-        with:
-          ref: ${{ github.ref }}
 
       - name: Terraform Init
         id: init
