--- a/.github/actions/format/action.yaml
+++ b/.github/actions/format/action.yaml
@@ -2,13 +2,18 @@ name: Format Terraform Files
 
 on:
   workflow_call:
+    inputs:
+      github_token:
+        description: 'The GitHub token to use'
+        type: string
+        required: true
     
 permissions:
   contents: write
   pull-requests: write
 
 env:
-  GH_TOKEN: ${{ github.token }}
+  GH_TOKEN: ${{ inputs.github_token }}
   WORKING_DIR: '.'
 
 runs:
