--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -31,8 +31,6 @@ jobs:
       - name: Checkout
         id: checkout
         uses: actions/checkout@master
-        with:
-          ref: ${{ github.ref }}
 
       - name: Terraform fmt
         id: fmt
@@ -46,8 +44,6 @@ jobs:
       - name: Checkout
         id: checkout
         uses: actions/checkout@master
-        with:
-          ref: ${{ github.ref }}
 
       - name: Terraform validate
         id: validate
@@ -55,3 +51,4 @@ jobs:
         with:
           terraform_workspace: ${{ env.TF_WORKSPACE }}
           working_dir: ${{ env.WORKING_DIR }}
+          github_token: ${{ env.GH_TOKEN }}
