--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -35,6 +35,7 @@ jobs:
         with:
           terraform_workspace: ${{ env.TF_WORKSPACE }}
           working_dir: ${{ env.WORKING_DIR }}
+          github_token: ${{ env.GH_TOKEN }}
 
   plan:
     name: Plan Terraform Files
@@ -51,6 +52,7 @@ jobs:
         with:
           working_dir: ${{ env.WORKING_DIR }}
           terraform_workspace: ${{ env.TF_WORKSPACE }}
+          github_token: ${{ env.GH_TOKEN }}
 
   apply:
     name: Apply Terraform Files
@@ -68,3 +70,4 @@ jobs:
         with:
           working_dir: ${{ env.WORKING_DIR }}
           terraform_workspace: ${{ env.TF_WORKSPACE }}
+          github_token: ${{ env.GH_TOKEN }}
