--- a/.github/actions/plan/action.yaml
+++ b/.github/actions/plan/action.yaml
@@ -9,19 +9,6 @@ inputs:
     description: 'The Terraform workspace to use'
     type: string
     required: true
-  github_token:
-    description: 'The GitHub token to use'
-    type: string
-    required: true
-
-permissions:
-  contents: read
-  pull-requests: write
-
-env:
-  GH_TOKEN: ${{ inputs.github_token }}
-  WORKING_DIR: ${{ inputs.working_dir }}
-  TF_WORKSPACE: ${{ inputs.terraform_workspace }}
 
 runs:
   using: 'composite'
@@ -33,15 +20,15 @@ runs:
     - name: Terraform Init
       id: init
       run: terraform init
-      working-directory: ${{ env.WORKING_DIR }}
+      working-directory: ${{ inputs.working_dir }}
 
     - name: Terraform Plan
       id: plan
-      run: terraform plan -out=${{ env.WORKSPACE }}.tfplan
-      working-directory: ${{ env.WORKING_DIR }}
+      run: terraform plan -out=${{ inputs.terraform_workspace }}.tfplan
+      working-directory: ${{ inputs.working_dir }}
     
     - name: 'Save tfplan'
       uses: actions/cache/save@v4.1.2
       with:
-        path: ${{ env.WORKING_DIR }}/${{ env.TF_WORKSPACE }}.tfplan
-        key: tfplan-${{ env.TF_WORKSPACE }}-${{ github.run_number }}
+        path: ${{ inputs.working_dir }}/${{ inputs.terraform_workspace }}.tfplan
+        key: tfplan-${{ inputs.terraform_workspace }}-${{ github.run_number }}
