--- a/.github/actions/format/action.yaml
+++ b/.github/actions/format/action.yaml
@@ -21,13 +21,16 @@ runs:
         path: ${{ inputs.working_dir }}
 
     - name: Commit changes
+      id: commit
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add .
         git diff-index --quiet HEAD || git commit -m "terraform fmt applied"
+      shell: bash
 
     - name: Push Changes
       id: push
       run: |
         git push origin ${{ github.ref }}
+      shell: bash
