actions: Fixed paths-ignore, added workflow-dispatch to all workflows

--- a/.github/workflows/stage.yaml
+++ b/.github/workflows/stage.yaml
@@ -4,8 +4,9 @@ on:
   pull_request:
     branches:
       - stage
-    paths:
+    paths-ignore:
       - '.github/**'
+  workflow_dispatch:
 
 permissions:
   contents: read
