--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -4,8 +4,9 @@ on:
   pull_request:
     branches:
       - main
-    paths:
+    paths-ignore:
       - '.github/**'
+  workflow_dispatch:
 
 permissions:
   contents: read
