actions: Added shell to plan and apply composite actions

--- a/.github/actions/apply/action.yaml
+++ b/.github/actions/apply/action.yaml
@@ -32,3 +32,4 @@ runs:
       id: apply
       run: terraform apply -auto-approve ${{ inputs.working_dir }}/${{ inputs.terraform_workspace }}.tfplan
       working-directory: ${{ inputs.working_dir }}
+      shell: bash
