--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -1,4 +1,4 @@
-name: Dev - Validate, Plan & Apply Terraform Files
+name: Dev - Validate & Plan Terraform Files
 
 on:
   pull_request:
@@ -52,19 +52,3 @@ jobs:
           working_dir: ${{ env.WORKING_DIR }}
           terraform_workspace: ${{ env.TF_WORKSPACE }}
 
-  apply:
-    name: Apply Terraform Files
-    runs-on: ubuntu-latest
-    needs: plan
-    environment: Development
-    steps:
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@master
-
-      - name: Terraform apply
-        id: apply
-        uses: ./.github/actions/apply
-        with:
-          working_dir: ${{ env.WORKING_DIR }}
-          terraform_workspace: ${{ env.TF_WORKSPACE }}
