--- a/.github/actions/plan/action.yaml
+++ b/.github/actions/plan/action.yaml
@@ -29,8 +29,9 @@ runs:
       working-directory: ${{ inputs.working_dir }}
       shell: bash
     
-    - name: 'Save tfplan'
-      uses: actions/cache/save@v4.1.2
+    - name: Upload Plan Artifact
+      uses: actions/upload-artifact@v3
       with:
+        name: tfplan
         path: ${{ inputs.working_dir }}/${{ inputs.terraform_workspace }}.tfplan
-        key: tfplan-${{ inputs.terraform_workspace }}-${{ github.run_number }}
+
