--- a/.github/actions/plan/action.yaml
+++ b/.github/actions/plan/action.yaml
@@ -29,9 +29,9 @@ runs:
       working-directory: ${{ inputs.working_dir }}
       shell: bash
     
-    - name: Upload Plan Artifact
+    - name: Upload Plan Artifactp
       uses: actions/upload-artifact@v3
       with:
-        name: tfplan
+        name: ${{ inputs.terraform_workspace }}-tfplan
         path: ${{ inputs.working_dir }}/${{ inputs.terraform_workspace }}.tfplan
 
