--- a/.github/actions/apply/action.yaml
+++ b/.github/actions/apply/action.yaml
@@ -17,18 +17,18 @@ runs:
     - name: Checkout
       id: checkout
       uses: actions/checkout@master
+
+    - name: Restore Terraform Plan File
+      uses: actions/cache@v3
+      with:
+        path: ${{ inputs.working_dir }}/${{ inputs.terraform_workspace }}.tfplan
+        key: terraform-plan-${{ inputs.terraform_workspace }}
       
     - name: Terraform Init
       id: init
       run: terraform init
       working-directory: ${{ inputs.working_dir }}
       shell: bash
-
-    - name: Download Plan Artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: ${{ inputs.terraform_workspace }}-tfplan
-        path: ${{ inputs.working_dir }}
       
     - name: Terraform Apply
       id: apply
