--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -51,3 +51,20 @@ jobs:
         with:
           working_dir: ${{ env.WORKING_DIR }}
           terraform_workspace: ${{ env.TF_WORKSPACE }}
+
+  apply:
+    name: Apply Terraform Files
+    runs-on: ubuntu-latest
+    needs: plan
+    environment: Production
+    steps:
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@master
+
+      - name: Terraform apply
+        id: apply
+        uses: ./.github/actions/apply
+        with:
+          working_dir: ${{ env.WORKING_DIR }}
+          terraform_workspace: ${{ env.TF_WORKSPACE }}
