--- a/.github/workflows/stage.yaml
+++ b/.github/workflows/stage.yaml
@@ -52,3 +52,13 @@ jobs:
           working_dir: ${{ env.WORKING_DIR }}
           terraform_workspace: ${{ env.TF_WORKSPACE }}
 
+  apply:
+    name: Apply Terraform Files
+    runs-on: ubuntu-latest
+    needs: plan
+    environment: Stage
+    steps:
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@master
+
