actions: Set workflows to run on push to brances instead of at pull-request

--- a/.github/workflows/stage.yaml
+++ b/.github/workflows/stage.yaml
@@ -1,7 +1,7 @@
 name: Stage - Validate & Plan Terraform Files
 
 on:
-  pull_request:
+  push:
     branches:
       - stage
     paths-ignore:
@@ -62,3 +62,9 @@ jobs:
         id: checkout
         uses: actions/checkout@master
 
+      - name: Terraform apply
+        id: apply
+        uses: ./.github/actions/apply
+        with:
+          working_dir: ${{ env.WORKING_DIR }}
+          terraform_workspace: ${{ env.TF_WORKSPACE }}
