--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -84,4 +84,4 @@ jobs:
         with:
           working_dir: 'src'
           go_version: '1.19'
-          azure_webapp_name: 'my_go_app'
+          azure_webapp_name: 'myGoApp'
