--- a/.github/actions/apply/action.yaml
+++ b/.github/actions/apply/action.yaml
@@ -22,7 +22,7 @@ runs:
       uses: actions/cache@v3
       with:
         path: ${{ inputs.working_dir }}/${{ inputs.terraform_workspace }}.tfplan
-        key: terraform-plan-${{ inputs.terraform_workspace }}
+        key: terraform-plan-${{ inputs.terraform_workspace }}-${{ github.run_number }}-${{ github.run_attempt }}
       
     - name: Terraform Init
       id: init
