--- a/.github/actions/go/action.yaml
+++ b/.github/actions/go/action.yaml
@@ -39,5 +39,5 @@ runs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ inputs.azure_webapp_name }}
-        slot-name: 'Production'
+        slot-name: 'myGoApp'
         package: .
