--- a/.github/workflows/stage.yaml
+++ b/.github/workflows/stage.yaml
@@ -84,4 +84,4 @@ jobs:
         with:
           working_dir: 'src'
           go_version: '1.19'
-          azure_webapp_name: 'myGoApp'
+          azure_webapp_name: 'erlenrom-web-stage'
