--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -84,3 +84,7 @@ jobs:
         with:
           working_dir: '.'
           azure_webapp_name: 'erlenrom-web-prod'
+          client_id: ${{ env.ARM_CLIENT_ID }}
+          client_secret: ${{ env.ARM_CLIENT_SECRET }}
+          subscription_id: ${{ env.ARM_SUBSCRIPTION_ID }}
+          tenant_id: ${{ env.ARM_TENANT_ID }}
