--- a/.github/actions/go/action.yaml
+++ b/.github/actions/go/action.yaml
@@ -48,8 +48,8 @@ runs:
 
     - name: Build
       id: build
-      run: go build -o src/app src/main.go
-      working-directory: ${{ inputs.working_dir }}
+      run: go build -o app main.go
+      working-directory: 'src'
       shell: bash
 
     - name: Az Login
