--- a/.github/actions/validate/action.yaml
+++ b/.github/actions/validate/action.yaml
@@ -6,6 +6,11 @@ inputs:
     type: string
     required: false
     default: 'deployments'
+  workspace:
+    description: 'The Terraform workspace to use'
+    type: string
+    required: true
+    default: ''
 
 runs:
   using: 'composite'
@@ -17,6 +22,12 @@ runs:
     - name: Terraform Init
       id: init
       run: terraform init
+      working-directory: ${{ inputs.working_dir }}
+      shell: bash
+
+    - name: Terraform Workspace
+      id: workspace
+      run: terraform workspace select ${{ inputs.workspace }} || terraform workspace new ${{ inputs.workspace }}
       working-directory: ${{ inputs.working_dir }}
       shell: bash
 
