--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -38,6 +38,7 @@ jobs:
         uses: ./.github/actions/validate
         with:
           working_dir: ${{ env.WORKING_DIR }}
+          workspace: ${{ env.TF_WORKSPACE }}
 
   plan:
     name: Plan Terraform Files
