--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -54,3 +54,4 @@ jobs:
         uses: ./.github/actions/validate
         with:
           working_dir: ${{ env.WORKING_DIR }}
+          workspace: ${{ env.TF_WORKSPACE }}
