--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -23,6 +23,7 @@ env:
   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
   GH_TOKEN: ${{ github.token }}
   WORKING_DIR: 'deployments'
+  TF_WORKSPACE: ''
 
 jobs:
   format:
