--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -22,6 +22,7 @@ env:
   TF_VAR_mssql_administrator_login_password: ${{ secrets.MSSQL_ADMINISTRATOR_LOGIN_PASSWORD }}
   GH_TOKEN: ${{ github.token }}
   WORKING_DIR: 'deployments'
+  TF_WORKSPACE: 'prod'
 
 jobs:
   validate:
@@ -37,7 +38,6 @@ jobs:
         uses: ./.github/actions/validate
         with:
           working_dir: ${{ env.WORKING_DIR }}
-          workspace: 'prod'
 
   plan:
     name: Plan Terraform Files
@@ -53,7 +53,7 @@ jobs:
         uses: ./.github/actions/plan
         with:
           working_dir: ${{ env.WORKING_DIR }}
-          terraform_workspace: 'prod'
+          terraform_workspace: ${{ env.TF_WORKSPACE }}
 
   apply:
     name: Apply Terraform Files
@@ -70,7 +70,7 @@ jobs:
         uses: ./.github/actions/apply
         with:
           working_dir: ${{ env.WORKING_DIR }}
-          terraform_workspace: 'prod'
+          terraform_workspace: ${{ env.TF_WORKSPACE }}
 
   go:
     name: Build & Run Go
